add area support

--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,9 @@
 {
-  "name": "OrderMan"
+  "short_name": "OrderMan",
+  "name": "OrderMan",
+  "icons": [],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
